dodati opisi preostalim projektima i meta deskripcije stranica

--- a/3D-arhitektura-hale.html
+++ b/3D-arhitektura-hale.html
@@ -6,8 +6,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>VB Inženjering - 3D arhitektura hale</title>
-    <meta content="" name="description">
-        <meta content="" name="keywords">
+    <meta name="description" content="Realistična 3D vizualizacija čelične hale – VB Inženjering Beograd. Detaljno projektovanje, prostorna organizacija i moderna arhitektura.">
+    <meta content="" name="keywords">
 
     <!-- Favicons -->
     <link href="assets/img/logo/logoIcon.ico" rel="icon">
@@ -145,21 +145,16 @@
 
                 <div class="col-lg-8">
                     <div class="portfolio-description">
-                        <h2>This is an example of portfolio detail</h2>
+                        <h2>Industrijska hala od čelične konstrukcije</h2>
                         <p>
-                            Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                            Predstavljamo vam savremeni pristup <strong>projektovanju industrijskih objekata</strong> kroz detaljnu 3D vizualizaciju čelične hale. Stručni tima VB Inženjeringa je razvio funkcionalno i estetski optimizovano rešenje koje kombinuje preciznu tehničku izvedbu sa jasnom prezentacijom prostora.
                         </p>
                         <p>
-                            Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
+                            Kroz precizno modelovanje i realističan prikaz, vizualizacija omogućava jasan uvid u izgled i funkcionalnost objekta pre same izgradnje. Projekt je namenjen <strong>investitorima, izvođačima radova i arhitektonskim timovima</strong> koji žele efikasnu komunikaciju i jasnu prezentaciju tehničkih rešenja.
                         </p>
-
                         <p>
-                            Impedit ipsum quae et aliquid doloribus et voluptatem quasi. Perspiciatis occaecati earum et magnam animi. Quibusdam non qui ea vitae suscipit vitae sunt. Repudiandae incidunt cumque minus deserunt assumenda tempore. Delectus voluptas necessitatibus est.
-
-                        <p>
-                            Sunt voluptatum sapiente facilis quo odio aut ipsum repellat debitis. Molestiae et autem libero. Explicabo et quod necessitatibus similique quis dolor eum. Numquam eaque praesentium rem et qui nesciunt.
+                            Hala je idealna za sve koji traže pouzdano rešenje u oblasti čeličnih konstrukcija, sa fokusom na efikasnost, dugotrajnost i prostornu optimizaciju.
                         </p>
-
                     </div>
                 </div>
 
