--- a/3D-konstrukcija-hale.html
+++ b/3D-konstrukcija-hale.html
@@ -6,7 +6,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>VB Inženjering - 3D konstrukcija hale</title>
-    <meta content="" name="description">
+    <meta name="description" content="3D konstrukcija višenamjenske industrijske čelične hale – VB Inženjering Beograd. Precizno modeliranje i modularna gradnja objekata od čelika.">
+
     <meta content="" name="keywords">
 
     <!-- Favicons -->
@@ -141,20 +142,16 @@
 
                 <div class="col-lg-8">
                     <div class="portfolio-description">
-                        <h2>This is an example of portfolio detail</h2>
+                        <h2>Izrada 3D čelične konstrukcije hale</h2>
                         <p>
-                            Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                            Ova industrijska hala projektovana je kao višenamenski objekat sa fokusom na stabilnost, dugotrajnost i modularnost. Korišćenjem <strong>čeličnih elemenata visoke nosivosti</strong>, konstrukcija obezbjeđuje pouzdanu zaštitu i fleksibilnu primjenu u različitim industrijskim i komercijalnim okruženjima.
                         </p>
                         <p>
-                            Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
+                            Projektovanje je izvedeno u 3D softveru, što je omogućilo preciznu pripremu, brzu montažu i optimizaciju svih faza izgradnje. Hala je pogodna za <strong>skladištenje, proizvodne pogone, logistiku</strong> i druge poslovne namjene.
                         </p>
 
                         <p>
-                            Impedit ipsum quae et aliquid doloribus et voluptatem quasi. Perspiciatis occaecati earum et magnam animi. Quibusdam non qui ea vitae suscipit vitae sunt. Repudiandae incidunt cumque minus deserunt assumenda tempore. Delectus voluptas necessitatibus est.
-
-                        <p>
-                            Sunt voluptatum sapiente facilis quo odio aut ipsum repellat debitis. Molestiae et autem libero. Explicabo et quod necessitatibus similique quis dolor eum. Numquam eaque praesentium rem et qui nesciunt.
-                        </p>
+                            Nudimo projektovanje i izradu čeličnih konstrukcija, uključujući hale, nadstrešnice i druge infrastrukturne objekte, kontaktirajte nas.
 
                     </div>
                 </div>
