--- a/dizajn-eksterijera.html
+++ b/dizajn-eksterijera.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>VB Inženjering - 3D vizualizacija eksterijera</title>
-    <meta content="" name="description">
+    <meta name="description" content="VB Inženjering – 3D prikaz planinske vikendice u obliku slova A. Vizualizacija osvetljenja, terasa i završne obrade prema želji klijenta.">
     <meta content="" name="keywords">
 
     <!-- Favicons -->
