--- a/dizajn-enterijera.html
+++ b/dizajn-enterijera.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>VB Inženjering - 3D vizualizacija enterijera</title>
-    <meta content="" name="description">
+    <meta name="description" content="3D enterijerski dizajn apartmana – VB Inženjering. Vizualizacija rasporeda, osvetljenja i završne obrade pre početka radova.">
     <meta content="" name="keywords">
 
     <!-- Favicons -->
