--- a/montazni-objekti-a-frame.html
+++ b/montazni-objekti-a-frame.html
@@ -5,7 +5,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>VB Inženjering - Montažni objekti u A-frame stilu</title>
-    <meta content="" name="description">
+    <meta name="description" content="A-frame montažne kuće – VB Inženjering Beograd. Savremeni dizajn, drvena konstrukcija i personalizovani projekti za vikendice i domove.">
     <meta content="" name="keywords">
 
     <!-- Favicons -->
