--- a/montazni-objekti-classic.html
+++ b/montazni-objekti-classic.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>VB Inženjering - Montažni objekti u klasičnom stilu</title>
-    <meta content="" name="description">
+    <meta name="description" content="VB Inženjering – montažne kuće u klasičnom stilu. Robusna drvena konstrukcija, energetska efikasnost i završna obrada po izboru.">
     <meta content="" name="keywords">
 
     <!-- Favicons -->
