--- a/projekat-u-toku.html
+++ b/projekat-u-toku.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>VB Inženjering - Radovi su u toku</title>
-    <meta content="" name="description">
+    <meta name="description" content="VB Inženjering – Radovi su u toku. Pratite realizaciju novih objekata i usluga. Uskoro predstavljamo završene projekte javnosti.">
     <meta content="" name="keywords">
 
     <!-- Favicons -->
