--- a/projekti.html
+++ b/projekti.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>VB Inženjering - Projekti</title>
-  <meta content="Istražite naš portfolio završenih građevinskih projekata. Pogledajte naše radove u kategorijama čeličnih i betonskih konstrukcija, sanacija i montažnih objekata, te 3D vizualizacija. Uverite se u kvalitet i stručnost." name="description">
+  <meta content="Istražite naš portfolio ili katalog završenih građevinskih projekata. Pogledajte naše radove u kategorijama čeličnih i betonskih konstrukcija, sanacija i montažnih objekata, te 3D vizualizacija." name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
