--- a/usluge.html
+++ b/usluge.html
@@ -228,12 +228,15 @@
               <div class="swiper-button-next"></div>
             </div>
             <br>
-            <h3>3D vizaelizacija enterijera i eksterijera</h3>
+            <h3>3D vizualizacija enterijera i eksterijera</h3>
             <p>
               Koristeći napredne tehnologije, kreiramo detaljne 3D vizualizacije koje investitorima i izvođačima pružaju kristalno jasnu predstavu o finalnom izgledu projekta.
             </p>
             <p>
               Pored vizualizacija, razvijamo i inteligentne <b>BIM (Building Information Modeling)</b> modele. Ovi modeli ne sadrže samo geometrijske informacije, već i sve relevantne podatke o komponentama objekta, njihovim karakteristikama i međusobnim vezama. Implementacija 3D vizualizacija i BIM modela značajno doprinosi ranom identifikovanju potencijalnih problema i konflikata u dizajnu, pre nego što oni eskaliraju na gradilištu.
+            </p>
+            <p>
+              Pogledajte detaljnije naše <strong>prethodne projekte 3D vizualizacije</strong> <a href="dizajn-enterijera.html">enterijera</a> ili <a href="dizajn-eksterijera.html">eksterijera.</a>
             </p>
           </div>
 
