--- a/celicna-nadstresnica.html
+++ b/celicna-nadstresnica.html
@@ -6,7 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>VB Inženjering - Projekat nadstrešnice</title>
-  <meta content="" name="description">
+  <meta name="description" content="Čelična nadstrešnica VB Inženjering, precizna izrada, dugotrajna zaštita i savremeni dizajn za komercijalne i industrijske objekte.">
+
   <meta content="" name="keywords">
 
   <!-- Favicons -->
@@ -149,21 +150,16 @@
 
           <div class="col-lg-8">
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>Višenamenska čelična nadstrešnica</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                U okviru ovog projekta, tim VB Inženjeringa je realizovao izradu čelične nadstrešnice uz poštovanje svih tehničkih i sigurnosnih standarda. Objekat se odlikuje visokom otpornošću na spoljašnje uticaje, minimalnim održavanjem i dugim vekom trajanja.
               </p>
               <p>
-                Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
+                Nadstrešnica je projektovana da odgovori na različite potrebe, od zaštite prostora od vremenskih uslova, do estetskog doprinosa objektu. Konstrukcija je modularna, što omogućava fleksibilnost u primjeni kod industrijskih i komercijalnih prostora, ili privatnih objekata.
               </p>
-
               <p>
-                Impedit ipsum quae et aliquid doloribus et voluptatem quasi. Perspiciatis occaecati earum et magnam animi. Quibusdam non qui ea vitae suscipit vitae sunt. Repudiandae incidunt cumque minus deserunt assumenda tempore. Delectus voluptas necessitatibus est.
-
-              <p>
-                Sunt voluptatum sapiente facilis quo odio aut ipsum repellat debitis. Molestiae et autem libero. Explicabo et quod necessitatibus similique quis dolor eum. Numquam eaque praesentium rem et qui nesciunt.
+                Ovim projektom potvrđujemo svoju posvećenost kvalitetu, preciznosti i pouzdanosti, uz jasno definisane faze realizacije i transparentnu komunikaciju sa klijentom.
               </p>
-
             </div>
           </div>
 
