dodata stranica sa betonskim konstrukcijama

--- a/betonske-konstrukcije.html
+++ b/betonske-konstrukcije.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>VB Inženjering - Radovi su u toku</title>
-    <meta name="description" content="VB Inženjering – Radovi su u toku. Pratite realizaciju novih objekata i usluga. Uskoro predstavljamo završene projekte javnosti.">
+    <title>VB Inženjering - Betonske konstrukcije</title>
+    <meta name="description" content="VB Inženjering predstavlja stambenu zgradu od armiranog betona – energetski efikasnu, seizmički otpornu i vizuelno usklađenu konstrukciju">
     <meta content="" name="keywords">
 
     <!-- Favicons -->
@@ -88,11 +88,11 @@
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
         <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-            <h2>Projekti su u toku</h2>
+            <h2>Betonske konstrukcije</h2>
             <ol>
                 <li><a href="index.html">Početna stranica</a></li>
                 <li><a href="projekti.html">Projekti</a></li>
-                <li>Detalji projekta</li>
+                <li>Betonske konkstrukcije</li>
             </ol>
 
         </div>
@@ -102,15 +102,47 @@
     <section id="project-details" class="project-details">
         <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-            <img style="display:block; margin-left: auto; margin-right: auto; width: 50%;" src="assets/img/workInProgress.png" alt="">
+            <div class="position-relative h-100">
+                <div class="slides-1 portfolio-details-slider swiper">
+                    <div class="swiper-wrapper align-items-center">
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/betonski/1.png" alt="Trospratna moderna stambena zgrada minimalističkog dizajna, sa balkonima i okružena drvećem. ">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/betonski/2.png" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/betonski/3.png" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+
+            </div>
 
             <div class="row justify-content-between gy-4 mt-4">
 
                 <div class="col-lg-8">
                     <div class="portfolio-description">
-                        <h2>Radovi su u toku...</h2>
-                        <p>Posvećeni smo realizaciji novih objekata i usluga, a završene projekte ćemo uskoro predstaviti javnosti.</p>
-                        <p>Posetite nas ponovo kako biste prvi videli kako naše ideje postaju budućnost!</p>
+                        <h2>Konstrukcija za budućnost – stambena zgrada od armiranog betona</h2>
+                        <p>
+                            Zgradu smo projektovali da zadovolji visoke standarde konstrukcijske sigurnosti i energetske efikasnosti uz savremeni arhitektonski izraz. Prilagođena je urbanom okruženju sa jasno definisanim stambenim jedinicama. Konstrukcija se oslanja na robustan sistem betonskih elemenata koji obezbeđuju dugotrajnost i nosivost.
+                        </p>
+                        <p>
+                            Primenom sistema armiranobetonskih konstrukcija omogućena je <strong>optimalna raspodela opterećenja, otpornost na seizmičke uticaje i dug vek trajanja objekta</strong>. Prozori su pažljivo pozicionirani kako bi omogućili maksimalnu prirodnu osvetljenost i ventilaciju, dok su terase integrisane u strukturu bez narušavanja statičke stabilnosti. Fasada je izvedena u kombinaciji betonskih panela i termoizolacionih slojeva čime se postiže energetska efikasnost i moderan izgled.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-lg-3">
+                    <div class="portfolio-info">
+                        <h3>Informacije</h3>
+                        <ul>
+                            <li><strong>Kategorija</strong> <span>Betonske konstrukcije</span></li>
+                            <li><strong>Izrađeno</strong> <span>2025.</span></li>
+                        </ul>
                     </div>
                 </div>
 
