--- a/dizajn-eksterijera.html
+++ b/dizajn-eksterijera.html
@@ -64,7 +64,7 @@
                                 <li><a href="celicna-nadstresnica.html">Čelična nadstrešnica</a></li>
                             </ul>
                         </li>
-                        <li><a href="projekat-u-toku.html">Betonske konstrukcije</a></li>
+                        <li><a href="betonske-konstrukcije.html">Betonske konstrukcije</a></li>
                         <li><a href="projekat-u-toku.html">Sanacije i reparature</a></li>
                         <li class="dropdown"><a href="#"><span>3D vizualizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
                             <ul>
@@ -127,10 +127,10 @@
                     <div class="portfolio-description">
                         <h2>Planinska oaza: 3D prikaz savremene planinske kolibe</h2>
                         <p>
-                            Kroz 3D vizualizaciju, klijentu je omogućeno da pre početka gradnje vidi kako će objekat izgledati u različitim uslovima osvetljenja i u potpunosti prilagodi svaki eksterijerni detalj, od boje drveta do završne obrade krova, osiguravajući da se konačni rezultat potpuno podudara sa njegovom vizijom idealnog planinskog doma.
+                            Kroz 3D vizualizaciju, klijentu je omogućeno da <strong>pre početka gradnje</strong> vidi kako će objekat izgledati u različitim uslovima osvetljenja i u potpunosti prilagodi svaki eksterijerni detalj, od boje drveta do završne obrade krova, osiguravajući da se konačni rezultat potpuno podudara sa njegovom vizijom idealnog planinskog doma.
                         </p>
                         <p>
-                            Eksterijer moderne planinske vikendice, upečatljivog dizajna u obliku slova A, odlikuje skladan spoj prirodnih materijala i savremenog minimalizma. Objekat je obložen toplim drvenim panelima, dok su veliki stakleni portali ključni elementi koji obezbeđuju maksimalan prodor svetla i pružaju divan pogled na prirodu. Posebna pažnja posvećena je prostranoj terasi koja je vizualizovana kao idealno mesto za opuštanje, čak i u zimskim uslovima.
+                            Eksterijer moderne planinske vikendice, upečatljivog dizajna u obliku slova A, odlikuje skladan <strong>spoj prirodnih materijala i savremenog minimalizma</strong>. Objekat je obložen toplim drvenim panelima, dok su veliki stakleni portali ključni elementi koji obezbeđuju maksimalan prodor svetla i pružaju divan pogled na prirodu. Posebna pažnja posvećena je prostranoj <strong>terasi</strong> koja je vizualizovana kao idealno mesto za opuštanje, čak i u zimskim uslovima.
                         </p>
                     </div>
                 </div>
