--- a/dizajn-enterijera.html
+++ b/dizajn-enterijera.html
@@ -64,7 +64,7 @@
                                 <li><a href="celicna-nadstresnica.html">Čelična nadstrešnica</a></li>
                             </ul>
                         </li>
-                        <li><a href="projekat-u-toku.html">Betonske konstrukcije</a></li>
+                        <li><a href="betonske-konstrukcije.html">Betonske konstrukcije</a></li>
                         <li><a href="projekat-u-toku.html">Sanacije i reparature</a></li>
                         <li class="dropdown"><a href="#"><span>3D vizualizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
                             <ul>
@@ -143,7 +143,7 @@
                     <div class="portfolio-description">
                         <h2>Od vizije do stvarnosti: 3D prikaz enterijera apartmana</h2>
                         <p>
-                            Kreiranje idealnog životnog ili radnog prostora zahteva više od same izgradnje – potreban je pažljivo osmišljen dizajn enterijera. U VB Inženjeringu, kroz našu uslugu 3D vizualizacije, nudimo vam mogućnost da pre početka radova detaljno sagledate i prilagodite svaki aspekt unutrašnjeg uređenja.
+                            Kreiranje idealnog <strong>životnog ili radnog prostora</strong> zahteva više od same izgradnje – potreban je pažljivo osmišljen dizajn enterijera. U VB Inženjeringu, kroz našu uslugu 3D vizualizacije, nudimo vam mogućnost da pre početka radova detaljno sagledate i prilagodite svaki aspekt unutrašnjeg uređenja.
                         </p>
                         <p>
                             Ovaj projekat enterijera osmišljen je sa ciljem stvaranja modernog, funkcionalnog i udobnog životnog prostora za mladu porodicu. Kroz pažljivo planiranje rasporeda prostorija, iskorišćena je maksimalna količina prirodne svetlosti, a izborom neutralne palete boja stvoren je osećaj prostranosti i elegancije. Centralni deo stana čini prostrani dnevni boravak sa integrisanom kuhinjom i trpezarijom, dizajniran za druženje i opuštanje.
@@ -209,7 +209,7 @@
                             Ovaj projekat 3D vizualizacije predstavlja konceptualno rešenje za modernu stomatološku ordinaciju, sa ciljem da se kreira prostor koji spaja visoki profesionalizam sa osećajem udobnosti i čistoće.
                         </p>
                         <p>
-                            Kroz pažljivo planiranje, kreiran je logičan raspored prostorija koji omogućava nesmetan protok pacijenata, od čekaonice, preko prostorije za sterilizaciju, do ordinacijske sale, za prostor od oko 40 metara kvadratnih. U dizajnu su integrisana rešenja za najsavremeniju medicinsku opremu, osiguravajući da ordinacija bude spremna za sve potrebe moderne stomatologije. 3D model je omogućio klijentu da detaljno sagleda prostor, materijale i osvetljenje, potvrđujući da je konačni dizajn istovremeno estetski privlačan i savršeno prilagođen svrsi.
+                            Kroz pažljivo planiranje, kreiran je <strong>logičan raspored prostorija</strong> koji omogućava nesmetan protok pacijenata, od čekaonice, preko prostorije za sterilizaciju, do ordinacijske sale, za prostor od oko 40 metara kvadratnih. U dizajnu su integrisana rešenja za najsavremeniju medicinsku opremu, osiguravajući da ordinacija bude spremna za sve potrebe moderne stomatologije. 3D model je omogućio klijentu da detaljno sagleda prostor, materijale i osvetljenje, potvrđujući da je konačni dizajn istovremeno <strong>estetski privlačan i savršeno prilagođen svrsi</strong>.
                         </p>
                     </div>
                 </div>
