--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                   <li><a href="celicna-nadstresnica.html">Čelična nadstrešnica</a></li>
                 </ul>
               </li>
-              <li><a href="projekat-u-toku.html">Betonske konstrukcije</a></li>
+              <li><a href="betonske-konstrukcije.html">Betonske konstrukcije</a></li>
               <li><a href="projekat-u-toku.html">Sanacije i reparature</a></li>
               <li class="dropdown"><a href="#"><span>3D vizualizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
@@ -172,7 +172,7 @@
               <div class="pozadina">
                 <h3 class="mb-2">Kompletna rešenja za sve vaše građevinske ideje. </h3>
                 <h4 style="font-size: 24px;">Naša misija:</h4>
-                <p style="color: black; font-size: 16px;">Pružanje vrhunske usluge u oblasti građevinarstva u <strong>Beogradu i okolini</strong>, gradeći sigurne, funkcionalne i estetski privlačne objekte.</p>
+                <p style="color: black; font-size: 16px;">Pružanje vrhunske usluge u oblasti građevinarstva na teritoriji Beograda i šire, gradeći sigurne, funkcionalne i estetski privlačne objekte.</p>
                 <h4 style="font-size: 24px;">Naša vizija:</h4>
                 <p style="color: black; font-size: 16px;">Istaći se kao prvi izbor za sve klijente koji traže pouzdanog partnera za izgradnju objekata koji poboljšavaju kvalitet života.</p>
               </div>
