--- a/kontakt.html
+++ b/kontakt.html
@@ -81,7 +81,7 @@
                   <li><a href="celicna-nadstresnica.html">Čelična nadstrešnica</a></li>
                 </ul>
               </li>
-              <li><a href="projekat-u-toku.html">Betonske konstrukcije</a></li>
+              <li><a href="betonske-konstrukcije.html">Betonske konstrukcije</a></li>
               <li><a href="projekat-u-toku.html">Sanacije i reparature</a></li>
               <li class="dropdown"><a href="#"><span>3D vizualizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
