--- a/3D-konstrukcija-hale.html
+++ b/3D-konstrukcija-hale.html
@@ -65,7 +65,7 @@
                                 <li><a href="celicna-nadstresnica.html">Čelična nadstrešnica</a></li>
                             </ul>
                         </li>
-                        <li><a href="projekat-u-toku.html">Betonske konstrukcije</a></li>
+                        <li><a href="betonske-konstrukcije.html">Betonske konstrukcije</a></li>
                         <li><a href="projekat-u-toku.html">Sanacije i reparature</a></li>
                         <li class="dropdown"><a href="#"><span>3D vizualizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
                             <ul>
@@ -151,7 +151,7 @@
                         </p>
 
                         <p>
-                            Nudimo projektovanje i izradu čeličnih konstrukcija, uključujući hale, nadstrešnice i druge infrastrukturne objekte, kontaktirajte nas.
+                            Nudimo projektovanje i izradu raznih čeličnih konstrukcija, uključujući hale, nadstrešnice i druge infrastrukturne objekte, kontaktirajte nas.
 
                     </div>
                 </div>
