--- a/celicna-nadstresnica.html
+++ b/celicna-nadstresnica.html
@@ -65,7 +65,7 @@
                   <li><a href="celicna-nadstresnica.html">Čelična nadstrešnica</a></li>
                 </ul>
               </li>
-              <li><a href="projekat-u-toku.html">Betonske konstrukcije</a></li>
+              <li><a href="betonske-konstrukcije.html">Betonske konstrukcije</a></li>
               <li><a href="projekat-u-toku.html">Sanacije i reparature</a></li>
               <li class="dropdown"><a href="#"><span>3D vizualizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
@@ -155,7 +155,7 @@
                 U okviru ovog projekta, tim VB Inženjeringa je realizovao izradu čelične nadstrešnice uz poštovanje svih tehničkih i sigurnosnih standarda. Objekat se odlikuje visokom otpornošću na spoljašnje uticaje, minimalnim održavanjem i dugim vekom trajanja.
               </p>
               <p>
-                Nadstrešnica je projektovana da odgovori na različite potrebe, od zaštite prostora od vremenskih uslova, do estetskog doprinosa objektu. Konstrukcija je modularna, što omogućava fleksibilnost u primjeni kod industrijskih i komercijalnih prostora, ili privatnih objekata.
+                Nadstrešnica je projektovana da odgovori na <strong>različite potrebe</strong>, od zaštite prostora od vremenskih uslova, do estetskog doprinosa objektu. Konstrukcija je <strong>modularna</strong>, što omogućava fleksibilnost u primjeni kod industrijskih i komercijalnih prostora, ili privatnih objekata.
               </p>
               <p>
                 Ovim projektom potvrđujemo svoju posvećenost kvalitetu, preciznosti i pouzdanosti, uz jasno definisane faze realizacije i transparentnu komunikaciju sa klijentom.
