--- a/projekti.html
+++ b/projekti.html
@@ -63,7 +63,7 @@
                   <li><a href="celicna-nadstresnica.html">Čelična nadstrešnica</a></li>
                 </ul>
               </li>
-              <li><a href="projekat-u-toku.html">Betonske konstrukcije</a></li>
+              <li><a href="betonske-konstrukcije.html">Betonske konstrukcije</a></li>
               <li><a href="projekat-u-toku.html">Sanacije i reparature</a></li>
               <li class="dropdown"><a href="#"><span>3D vizualizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
@@ -150,7 +150,15 @@
             </div><!-- End Projects Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-beton">
-                <p>Novi projekti su u toku...</p>
+              <div class="portfolio-content h-100">
+                <img src="assets/img/projects/betonski/2.png" class="img-fluid" alt="Trospratna moderna stambena zgrada minimalističkog dizajna, sa balkonima i okružena drvećem. ">
+                <div class="portfolio-info">
+                  <h4>Zgrada</h4>
+                  <p>Betonska konstrukcija stambene zgrade</p>
+                  <a href="assets/img/projects/betonski/2.png" data-gallery="portfolio-gallery-beton" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="betonske-konstrukcije.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
             </div><!-- End Projects Item -->
 
 
