uredjena stranica betonskih konstrukcija sa novim sadrzajima

--- a/betonske-konstrukcije.html
+++ b/betonske-konstrukcije.html
@@ -106,32 +106,117 @@
                 <div class="slides-1 portfolio-details-slider swiper">
                     <div class="swiper-wrapper align-items-center">
                         <div class="swiper-slide">
-                            <img src="assets/img/projects/betonski/1.png" alt="Trospratna moderna stambena zgrada minimalističkog dizajna, sa balkonima i okružena drvećem. ">
+                            <img src="assets/img/projects/betonski/1.webp" alt="Trospratna moderna stambena zgrada minimalističkog dizajna, sa balkonima i okružena drvećem. ">
                         </div>
                         <div class="swiper-slide">
-                            <img src="assets/img/projects/betonski/2.png" alt="">
+                            <img src="assets/img/projects/betonski/2.webp" alt="">
                         </div>
                         <div class="swiper-slide">
-                            <img src="assets/img/projects/betonski/3.png" alt="">
+                            <img src="assets/img/projects/betonski/3.webp" alt="">
                         </div>
                     </div>
                     <div class="swiper-pagination"></div>
                 </div>
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
+            </div>
 
+            <div class="row justify-content-between gy-4 mt-4">
+                    <div class="portfolio-description">
+                        <h2>Konstrukcija za budućnost – stambene zgrade od armiranog betona</h2>
+                        <p>
+                            Pregledajte naš portfolio projekata stambenih zgrada izrađenih od betona. Pored izgradnje prikazanih projekata nudimo i mogućnost izgradnje potpuno novih objekata, prilagođenih vašim specifičnim potrebama, lokaciji i viziji.
+                        </p>
+                        <p>
+                            Betonske konstrukcije koje mi gradimo <strong>zadržavaju svoju vrednost kroz vreme</strong>, ne podležu deformacijama, vlagi ili štetočinama. Za vas kao investitore i vlasnike stanova, to znači manji rizik i veći povraćaj ulaganja.
+                        </p>
+                    </div>
+            </div>
+
+            <br>
+            <div class="position-relative h-100">
+                <div class="slides-1 portfolio-details-slider swiper">
+                    <div class="swiper-wrapper align-items-center">
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/betonski/8.webp" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/betonski/9.webp" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/betonski/7.webp" alt="Trospratna moderna stambena zgrada minimalističkog dizajna, sa balkonima i okružena drvećem. ">
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+            <div class="row justify-content-between gy-4 mt-4">
+                <div class="portfolio-description">
+                    <p>
+                        Zgrade smo projektovali da zadovolje visoke standarde konstrukcijske sigurnosti i energetske efikasnosti uz <strong>savremeni arhitektonski izraz</strong>. Prilagođene su urbanom okruženju sa jasno definisanim stambenim jedinicama. Konstrukcija se oslanja na robustan sistem betonskih elemenata koji obezbeđuju dugotrajnost i nosivost.
+                    </p>
+                </div>
+            </div>
+
+            <br>
+            <div class="position-relative h-100">
+                <div class="slides-1 portfolio-details-slider swiper">
+                    <div class="swiper-wrapper align-items-center">
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/betonski/10.webp" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/betonski/11.webp" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/betonski/12.webp" alt="Trospratna moderna stambena zgrada minimalističkog dizajna, sa balkonima i okružena drvećem. ">
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+
+            <div class="row justify-content-between gy-4 mt-4">
+                <div class="portfolio-description">
+                    <p>
+                        Beton je poznat po svojoj izdržljivosti. Otporan je na vremenske uslove, vlagu i habanje, omogućava decenije pouzdane upotrebe uz minimalne troškove održavanja. Beton ima sposobnost da akumulira toplotu i postepeno je oslobađa, čime doprinosi stabilnijoj unutrašnjoj mikroklimi. U kombinaciji sa kvalitetnom izolacijom, stanovi u betonskim zgradama pružaju prijatan ambijent tokom cele godine. Korišćenjem lokalnih materijala i održivih građevinskih praksi, betonske konstrukcije mogu imati smanjen ekološki otisak, uz mogućnost reciklaže i ponovne upotrebe.
+                    </p>
+                </div>
+            </div>
+
+            <br>
+            <div class="position-relative h-100">
+                <div class="slides-1 portfolio-details-slider swiper">
+                    <div class="swiper-wrapper align-items-center">
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/betonski/4.webp" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/betonski/5.webp" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/betonski/6.webp" alt="Trospratna moderna stambena zgrada minimalističkog dizajna, sa balkonima i okružena drvećem. ">
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
 
             <div class="row justify-content-between gy-4 mt-4">
 
                 <div class="col-lg-8">
                     <div class="portfolio-description">
-                        <h2>Konstrukcija za budućnost – stambena zgrada od armiranog betona</h2>
                         <p>
-                            Zgradu smo projektovali da zadovolji visoke standarde konstrukcijske sigurnosti i energetske efikasnosti uz savremeni arhitektonski izraz. Prilagođena je urbanom okruženju sa jasno definisanim stambenim jedinicama. Konstrukcija se oslanja na robustan sistem betonskih elemenata koji obezbeđuju dugotrajnost i nosivost.
+                            Primenom sistema armiranobetonskih konstrukcija omogućena je <strong>optimalna raspodela opterećenja, otpornost na seizmičke uticaje i dug vek trajanja objekta</strong>. Prozori su pažljivo pozicionirani kako bi omogućili maksimalnu prirodnu osvetljenost i ventilaciju, dok su terase integrisane u strukturu bez narušavanja statičke stabilnosti.
                         </p>
                         <p>
-                            Primenom sistema armiranobetonskih konstrukcija omogućena je <strong>optimalna raspodela opterećenja, otpornost na seizmičke uticaje i dug vek trajanja objekta</strong>. Prozori su pažljivo pozicionirani kako bi omogućili maksimalnu prirodnu osvetljenost i ventilaciju, dok su terase integrisane u strukturu bez narušavanja statičke stabilnosti. Fasada je izvedena u kombinaciji betonskih panela i termoizolacionih slojeva čime se postiže energetska efikasnost i moderan izgled.
+                            Zahvaljujući masivnosti i gustini, betonski zidovi i međuspratne ploče pružaju odličnu zvučnu izolaciju. Time se smanjuje prenos buke između stanova i sa spoljašnje strane, što doprinosi mirnijem životnom okruženju.
                         </p>
                     </div>
                 </div>
@@ -147,6 +232,8 @@
                 </div>
 
             </div>
+
+
 
         </div>
     </section><!-- End Projet Details Section -->
