--- a/projekti.html
+++ b/projekti.html
@@ -151,11 +151,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-beton">
               <div class="portfolio-content h-100">
-                <img src="assets/img/projects/betonski/2.png" class="img-fluid" alt="Trospratna moderna stambena zgrada minimalističkog dizajna, sa balkonima i okružena drvećem. ">
+                <img src="assets/img/projects/betonski/zgrade.png" class="img-fluid" alt="Moderne stambena zgrada minimalističkog dizajna, sa balkonima i okružena drvećem. ">
                 <div class="portfolio-info">
                   <h4>Zgrada</h4>
-                  <p>Betonska konstrukcija stambene zgrade</p>
-                  <a href="assets/img/projects/betonski/2.png" data-gallery="portfolio-gallery-beton" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <p>Betonske konstrukcije stambenih zgrada</p>
+                  <a href="assets/img/projects/betonski/zgrade.png" data-gallery="portfolio-gallery-beton" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="betonske-konstrukcije.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
